@@ -101,4 +101,4 @@ struct rct_ride_entry
 };
 
 void set_vehicle_type_image_max_sizes(CarEntry* vehicle_type, int32_t num_images);
-RideNaming get_ride_naming(const ride_type_t rideType, rct_ride_entry* rideEntry);
+RideNaming get_ride_naming(const ride_type_t rideType, const rct_ride_entry* rideEntry);
